Fix Java 9+ calls to List.of to be Arrays.asList